--- a/css/news.css
+++ b/css/news.css
@@ -10,16 +10,10 @@ body {
 
 header {
     text-align: center;
-    font-size: 2rem;
+    font-size: 1rem;
     padding: 20px;
     background: linear-gradient(#7FDFFF,#E5FFF6);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-}
-
-.hero {
-    text-align: center;
-    padding: 50px 20px;
-    background: url('hero-bg.jpg') center/cover;
 }
 
 .news-grid {
@@ -128,28 +122,28 @@ header {
   text-align: center; 
   }
   
-#g-nav li a{
-  color: #808080;
-  text-shadow: 0 0 20px #fff , 0 0 20px #fff , 0 0 20px #fff;
-  text-decoration: none;
-  padding:10px;
-  display: block;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  font-weight: bold;
-  font-size: 18px;
-  
-  position: relative;
-  overflow: hidden;
-  transition: all .2s;
-  }
-  
-#g-nav li.current a,
-#g-nav li a:hover{
-  
-    background: #fff;
-    color:#808080;
-  }
+  #g-nav li a{
+    color: #000;
+    text-shadow: 0 0 20px #fff , 0 0 20px #fff , 0 0 20px #fff;
+    text-decoration: none;
+    padding:10px;
+    display: block;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-weight: bold;
+    font-size: 18px;
+    
+    position: relative;
+    overflow: hidden;
+    transition: all .2s;
+    }
+    
+  #g-nav li.current a,
+  #g-nav li a:hover{
+    
+      background: #E5FFF6;
+      color:#000;
+    }
   
 #g-nav li a:hover{
     transition-delay: .5s;
@@ -203,7 +197,7 @@ header {
     left: 14px;
     height: 4px;
     border-radius: 2px;
-    background-color: #fff;
+    background-color: #000;
     width: 60%;
     transition: all .6s;
 }
@@ -224,7 +218,7 @@ header {
       position: absolute;
       top:5px;
       left:-2px;
-      color: #fff;
+      color: #000;
       font-size: 0.8rem;
       text-transform: uppercase;
 }
